# workflow_automation_via_serial_number

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/agents/: __init__.py  agent_manager.py  image_processing_agent.py  reasoning_agent.py
backend/app/api/: __init__.py  dependencies.py  main.py
backend/app/api/routes/: __init__.py  config.py  health.py  mock_api.py  workflow.py
backend/app/api/schemas/: __init__.py  workflow.py
backend/app/core/: __init__.py  app_config_source.py  config_validator.py  container.py  logger.py  settings.py
backend/app/mcp_clients/: __init__.py  fsg_client.py  phoenix_client.py
backend/app/models/: __init__.py  config_options.py  workflow.py
backend/app/services/: __init__.py  blob_storage_service.py  cosmos_db_service.py  foundry_service.py  mock_cosmos_db_service.py  workflow_service.py
backend/app/utils/: __init__.py  formatters.py
backend/app/workflows/: __init__.py  core.py  executors.py
backend/mcp_servers/: __init__.py
backend/mcp_servers/fsg/: __init__.py  server.py
backend/mcp_servers/phoenix/: __init__.py  server.py
backend/mock-data/: fsg.json  phoenix.json
backend/prompts/: __init__.py  templates.py
backend/tests/: api-tests.http  conftest.py  test_api_endpoints.py  test_config_options.py  test_mock_api.py  test_mock_cosmos_db_service.py  test_models.py  test_workflow_service.py
docs/diagrams/: architecture-azure.drawio  architecture-layered.drawio
docs/uml/: mock-api.puml
scripts/: setup_cosmos_rbac.py  setup_local_dev_rbac.py
